--- a/Resources/Private/Layouts/Default.html
+++ b/Resources/Private/Layouts/Default.html
@@ -1,4 +1,4 @@
-<f:be.container includeCssFiles="{0: '{f:uri.resource(path:\'css/rcui.css\')}'}" includeJsFiles="{0: '{f:uri.resource(path:\'js/rcui.js\')}'}" loadJQuery="1">
+<f:be.container includeCssFiles="{0: '{f:uri.resource(path:\'css/rcui.css\')}'}" includeJsFiles="{0: '{f:uri.resource(path:\'js/rcui.js\')}'}">
   <div class="typo3-fullDoc">
     <div id="typo3-docheader">
 			<div class="typo3-docheader-functions">
@@ -10,7 +10,7 @@
     </div>
     <div id="typo3-docbody">
       <div id="typo3-inner-docbody">        
-        <f:flashMessages renderMode="div" />
+        <f:flashMessages />
         <f:render section="main" />
       </div>
     </div>
