--- a/Resources/Private/Layouts/Default.html
+++ b/Resources/Private/Layouts/Default.html
@@ -1,15 +1,19 @@
-<f:be.container includeCssFiles="{0: '{f:uri.resource(path:\'css/rcui.css\')}'}" includeJsFiles="{0: '{f:uri.resource(path:\'js/rcui.js\')}'}">
+<f:be.pageRenderer includeRequireJsModules="{
+   0:'TYPO3/CMS/RestclientUi/Rcui'
+}" />
+
+<f:be.container includeCssFiles="{0: '{f:uri.resource(path:\'css/rcui.css\')}'}">
   <div class="typo3-fullDoc">
     <div id="typo3-docheader">
-			<div class="typo3-docheader-functions">
+      <div class="typo3-docheader-functions">
         <f:be.menus.actionMenu>
-					<f:be.menus.actionMenuItem label="{f:translate(key:'rcui.menu.main')}" controller="HttpClientUi" action="index" />
-          <f:be.menus.actionMenuItem label="{f:translate(key:'rcui.menu.history')}" controller="History" action="index" />
+        <f:be.menus.actionMenuItem label="{f:translate(key:'rcui.menu.main')}" controller="HttpClientUi" action="index" />
+        <f:be.menus.actionMenuItem label="{f:translate(key:'rcui.menu.history')}" controller="History" action="index" />
         </f:be.menus.actionMenu>
       </div>
     </div>
     <div id="typo3-docbody">
-      <div id="typo3-inner-docbody">        
+      <div id="typo3-inner-docbody">
         <f:flashMessages />
         <f:render section="main" />
       </div>
